--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = pyrepo_cookiecutter
+name = pyrepo_copier
 long_description = file: README.md
 long_description_content_type = text/markdown
 author = Talley Lambert
