--- a/project/.gitignore
+++ b/project/.gitignore
@@ -25,6 +25,8 @@ wheels/
 .installed.cfg
 *.egg
 
+.DS_Store
+
 # PyInstaller
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
@@ -103,6 +105,3 @@ ENV/
 
 # IDE settings
 .vscode/
-
-{{project_slug}}/_version.py
-src/{{project_slug}}/_version.py
