--- a/project/.github/workflows/ci.yml
+++ b/project/.github/workflows/ci.yml
@@ -1,108 +1,98 @@
 name: CI
 
 on:
-  push:
-    branches:
-      - main
-    tags:
-      - "v*"
-  pull_request: {}
-  workflow_dispatch:
+    push:
+        branches:
+            - main
+        tags:
+            - "v*"
+    pull_request:
+    workflow_dispatch:
+    schedule:
+        - cron: "0 0 * * 0" # every week (for --pre release tests)
 
 jobs:
-  check-manifest:
-    name: Check Manifest
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-python@v4
-        with:
-          python-version: "3.x"
-      - run: pip install check-manifest && check-manifest
+    check-manifest:
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v3
+            - run: pipx run check-manifest
 
-  test:
-    name: ${{ matrix.platform }} (${{ matrix.python-version }})
-    runs-on: ${{ matrix.platform }}
-    strategy:
-      fail-fast: false
-      matrix:
-        python-version: ['3.8', '3.9', '3.10']
-        platform: [ubuntu-latest, macos-latest, windows-latest]
+    test:
+        name: ${{ matrix.platform }} (${{ matrix.python-version }})
+        runs-on: ${{ matrix.platform }}
+        strategy:
+            fail-fast: false
+            matrix:
+                python-version: ["3.8", "3.9", "3.10", "3.11"]
+                platform: [ubuntu-latest, macos-latest, windows-latest]
 
-    steps:
-      - name: Cancel Previous Runs
-        uses: styfle/cancel-workflow-action@0.9.1
-        with:
-          access_token: ${{ github.token }}
+        steps:
+            - name: Cancel Previous Runs
+              uses: styfle/cancel-workflow-action@0.11.0
+              with:
+                  access_token: ${{ github.token }}
 
-      - uses: actions/checkout@v3
+            - uses: actions/checkout@v3
 
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v4
-        with:
-          python-version: ${{ matrix.python-version }}
-          cache: 'pip'
+            - name: Set up Python ${{ matrix.python-version }}
+              uses: actions/setup-python@v4
+              with:
+                  python-version: ${{ matrix.python-version }}
+                  cache-dependency-path: "pyproject.toml"
+                  cache: "pip"
 
-      - name: Install dependencies
-        run: |
-          python -m pip install -U pip
-          python -m pip install setuptools tox tox-gh-actions
+            # if running a cron job, we add the --pre flag to test against pre-releases
+            - name: Install dependencies
+              run: |
+                  python -m pip install -U pip
+                  python -m pip install -e .[test] ${{ github.event_name == 'schedule' && '--pre' || ''  }}
 
-      - name: Test with tox
-        run: python -m tox
-        env:
-          PLATFORM: ${{ matrix.platform }}
+            - name: Test
+              run: pytest --color=yes --cov --cov-report=xml --cov-report=term-missing
 
-      - name: Coverage
-        uses: codecov/codecov-action@v2
+            # If something goes wrong with --pre tests, we can open an issue in the repo
+            - name: Report --pre Failures
+              if: failure() && github.event_name == 'schedule'
+              uses: JasonEtco/create-an-issue@v2
+              env:
+                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+                  PLATFORM: ${{ matrix.platform }}
+                  PYTHON: ${{ matrix.python-version }}
+                  RUN_ID: ${{ github.run_id }}
+                  TITLE: "[test-bot] pip install --pre is failing"
+              with:
+                  filename: .github/TEST_FAIL_TEMPLATE.md
+                  update_existing: true
 
-  deploy:
-    name: Deploy
-    needs: test
-    if: "success() && startsWith(github.ref, 'refs/tags/')"
-    runs-on: ubuntu-latest
+            - name: Coverage
+              uses: codecov/codecov-action@v3
 
-    steps:
-      - uses: actions/checkout@v3
+    deploy:
+        name: Deploy
+        needs: test
+        if: success() && startsWith(github.ref, 'refs/tags/') && github.event_name != 'schedule'
+        runs-on: ubuntu-latest
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: "3.x"
+        steps:
+            - uses: actions/checkout@v3
 
-      - name: install
-        run: |
-          git tag
-          pip install -U pip
-          pip install -U build twine
-          python -m build
-          twine check dist/*
-          ls -lh dist
+            - name: Set up Python
+              uses: actions/setup-python@v4
+              with:
+                  python-version: "3.x"
 
-      - name: Build and publish
-        run: twine upload dist/*
-        env:
-          TWINE_USERNAME: __token__
-          TWINE_PASSWORD: ${{ secrets.TWINE_API_KEY }}
+            - name: Build
+              run: |
+                  git tag
+                  python -m pip install build
+                  python -m build
 
-      - uses: softprops/action-gh-release@v1
-        with:
-          generate_release_notes: true
+            - name: Publish distribution 📦 to PyPI
+              uses: pypa/gh-action-pypi-publish@release/v1
+              with:
+                  password: ${{ secrets.TWINE_API_KEY }}
 
-  # [WIP]
-  # https://python-semantic-release.readthedocs.io/en/latest/automatic-releases/github-actions.html
-  # release:
-  #   runs-on: ubuntu-latest
-  #   concurrency: release
-
-  #   steps:
-  #   - uses: actions/checkout@v3
-  #     with:
-  #       fetch-depth: 0
-
-  #   - name: Python Semantic Release
-  #     uses: relekang/python-semantic-release@master
-  #     with:
-  #       github_token: ${{ secrets.GITHUB_TOKEN }}
-  #       repository_username: __token__
-  #       repository_password: ${{ secrets.TWINE_API_KEY }}
+            - uses: softprops/action-gh-release@v1
+              with:
+                  generate_release_notes: true
