--- a/copier.yml
+++ b/copier.yml
@@ -5,7 +5,7 @@ _skip_if_exists:
   - README.md
 
 # Tasks to execute after generating or updating a project.
-_tasks:
+# _tasks:
 #   - git init -q --initial-branch=main || true
 #   - "{{ use_pre_commit }} && pre-commit autoupdate || echo 'please run: pip install pre-commit && pre-commit autoupdate'"
 #   - git add . && 
