--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pytest build check-manifest pre-commit copier tomli
+          pip install pytest build check-manifest pre-commit "copier<8" tomli
 
       - name: Test
         run: pytest tests -v --color=yes
