--- a/.github/workflows/autotag.yml
+++ b/.github/workflows/autotag.yml
@@ -13,7 +13,7 @@ jobs:
         uses: actions/checkout@v4
       - name: Auto tag
         run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git tag v1
           git push --tags
