--- a/.github/workflows/autotag.yml
+++ b/.github/workflows/autotag.yml
@@ -14,6 +14,6 @@ jobs:
       - name: Auto tag
         run: |
           git config --global user.name "github-actions[bot]"
-          git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git tag v1
           git push --tags
