--- a/.github/workflows/autotag.yml
+++ b/.github/workflows/autotag.yml
@@ -5,14 +5,15 @@ on:
     branches:
       - main
 
+permissions:
+  contents: write
+
 jobs:
   tag:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-      - name: Auto tag
-        run: |
+      - uses: actions/checkout@v4
+      - run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git tag v1
