--- a/.github/workflows/autotag.yml
+++ b/.github/workflows/autotag.yml
@@ -16,5 +16,6 @@ jobs:
       - run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git tag -d v1 || true
           git tag v1
           git push --tags
