--- a/.github/workflows/autotag.yml
+++ b/.github/workflows/autotag.yml
@@ -18,6 +18,9 @@ jobs:
       - run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          # delete local tag
           git tag -d v1 || true
+          # Delete remote tag
+          git push origin :refs/tags/v1 || true
           git tag v1
           git push --tags
