Add pydocstyle check

--- a/copier.yml
+++ b/copier.yml
@@ -104,14 +104,20 @@ use_ruff:
   help: Add ruff for linting?
   default: "{{ mode != 'simple' }}"
 
+use_pycodestyle:
+  when: "{{ mode == 'customize' and use_pre_commit and use_ruff }}"
+  type: bool
+  help: Use pycodestyle rather than numpydoc (stricter) for documentation checking?
+  default: "{{ use_ruff }}"
+
+use_numpydoc:
+  when: "{{ mode == 'customize' and use_pre_commit and not use_pycodestyle }}"
+  type: bool
+  help: Use numpydoc for documentation checking?
+  default: "{{ not use_pycodestyle }}"
+
 use_mypy:
   when: "{{ mode == 'customize' and use_pre_commit }}"
   type: bool
   help: Add mypy for static type checking on type hints?
-  default: "{{ mode != 'simple' }}"
-
-use_numpydoc:
-  when: "{{ mode == 'customize' and use_pre_commit }}"
-  type: bool
-  help: Add numpydoc for docstring checking?
   default: "{{ mode != 'simple' }}"
