--- a/copier.yml
+++ b/copier.yml
@@ -113,7 +113,7 @@ use_pydocstyle:
 use_numpydoc:
   when: "{{ mode == 'customize' and use_pre_commit and not use_pydocstyle }}"
   type: bool
-  help: Use numpydoc (stricter) for checking documentation compliance?
+  help: Use numpydoc for checking documentation compliance?
   default: "{{ not use_pydocstyle and mode != 'simple'}}"
 
 use_mypy:
