--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,6 +17,8 @@ jobs:
   test:
     name: ${{ matrix.platform }} py${{ matrix.python-version }}
     runs-on: ${{ matrix.platform }}
+    env:
+      UV_PYTHON: ${{ matrix.python-version }}
     strategy:
       fail-fast: false
       matrix:
@@ -25,16 +27,38 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+      - uses: astral-sh/setup-uv@v6
+      - run: uv run pytest tests -v --color=yes
 
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v4
-        with:
-          python-version: ${{ matrix.python-version }}
 
-      - name: Install dependencies
+  generate_and_dispatch:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - run: pipx run copier copy . generated --vcs-ref=HEAD
+
+      - name: prepare throw-away branch
         run: |
-          python -m pip install --upgrade pip
-          pip install pytest build check-manifest pre-commit copier tomli
+          git config user.name "GitHub Actions"
+          git config user.email "actions@github.com"
+          BR=generated-pr-${{ github.event.pull_request.number }}
+          git checkout -b "$BR"
+          cp -R generated/* .
+          git add .
+          git commit -m "🤖 Generated project for PR #${{ github.event.pull_request.number }}"
+          git push --set-upstream origin "$BR"
+        # pushes up `generated-pr-123`
 
-      - name: Test
-        run: pytest tests -v --color=yes
+      - name: trigger generated CI
+        uses: actions/github-script@v6
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            const pr = context.payload.pull_request.number
+            const branch = `generated-pr-${pr}`
+            await github.rest.actions.createWorkflowDispatch({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              workflow_id:   'ci.yml',    // the filename inside .github/workflows
+              ref:           branch
+            })
